Update VOCUS 2022-12-06 patch

--- a/_posts/2022-12-05-VOCUS-神人之家-人咧做-天敢有咧看.html
+++ b/_posts/2022-12-05-VOCUS-神人之家-人咧做-天敢有咧看.html
@@ -51,4 +51,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">我一直覺得台灣紀錄片導演在公與私的角度上的拿捏，往往優於他國的電影紀錄，在許多時候一些串流平台的量化紀錄片中，風向與引導的層面有時候連當地人都難以接受，但台灣紀錄片導演也許是偏愛日常風情，劇本無須刻意營造爆點，也能讓人感受敘述的魅力。</div>
 <div class="draft-block draft--p left">雖然紀錄片比起商業電影是段難走的漫漫長路，《神人之家》一部台灣平凡家庭故事紀錄電影，能獲得瑞士甚至他國觀眾感觸，我認為有些時候電影想傳達的話，旁人無須多言，只需讓人對此有興致才是。</div>
 <div class="draft-block draft--p left">如果《牧者》是不同性向者多年後跟自己宗教的和解，那麼《神人之家》我認為是導演盧盈志多年後，想要癒合家人、神明與自我的療傷行路，藉由電影的支撐再次撐著他往前邁步。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/GgcXguLpRh8"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/GgcXguLpRh8"></iframe></div>
