--- a/_posts/2022-12-06-VOCUS-jump-與-跳-跳躍-跳過-接跳-跳開-猛撲-蹦-蹶-增猛-漲暴-激變-進躍大-經神質-顫抖-顫驚-障礙物品-等的橋接.html
+++ b/_posts/2022-12-06-VOCUS-jump-與-跳-跳躍-跳過-接跳-跳開-猛撲-蹦-蹶-增猛-漲暴-激變-進躍大-經神質-顫抖-顫驚-障礙物品-等的橋接.html
@@ -58,9 +58,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">jumper：jump者；jump之人；jump員；jump機；jump之機</span>，意通「jump的機制」<span style="font-weight: bold; ">；jump之縷</span>，意通「jump之繩索」<span style="font-weight: bold; ">；jump之纜；jump之繩</span>，此時字尾&nbsp;r&nbsp;代表&nbsp;rope (繩)。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">jumpsuit：jump裝；jump裝套，意通「jump套裝」；jump傘裝套</span>，此時意通「跳傘套裝」<span style="font-weight: bold; ">；連身裝</span>，此時 <span style="font-weight: bold; ">jumpsuit =&nbsp;車3phsui對&nbsp;=&nbsp;車三fsuisui =&nbsp;車彡foot身u1士u衣&nbsp;=&nbsp;車彡止身ㄩI士ㄩ衣&nbsp;=&nbsp;車辵身ㄩI士ㄇ衣&nbsp;=&nbsp;車辶身裝  =&nbsp;連身裝</span>。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">jump rope：跳繩</span>，其中 <span style="font-weight: bold; ">rope =&nbsp;縷偶pE =&nbsp;糸ppEE =&nbsp;糸qp</span>ⴹⴺ<span style="font-weight: bold; ">&nbsp;=&nbsp;糸cllﬤ </span>ⴹⴺ<span style="font-weight: bold; ">&nbsp;=&nbsp;糸</span>⊏<span style="font-weight: bold; ">Ll</span>⊐<span style="font-weight: bold; "> </span>ⴹⴺ<span style="font-weight: bold; ">&nbsp;=&nbsp;糸</span>⊏<span style="font-weight: bold; ">乚丨</span>⊐<span style="font-weight: bold; "> </span>ⴹⴺ<span style="font-weight: bold; ">&nbsp;=&nbsp;糸黽&nbsp;=&nbsp;繩。</span></div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/SwYN7mTi6HM"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/SwYN7mTi6HM"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/SwYN7mTi6HM" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/SwYN7mTi6HM</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Van Halen - Jump (Official Music Video) /&nbsp;分享自&nbsp;YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
