--- a/_posts/2022-12-06-PQ-緬甸軍政府花大錢當冤大頭-中國巴基斯坦合製jf-17戰機故障飛不了.html
+++ b/_posts/2022-12-06-PQ-緬甸軍政府花大錢當冤大頭-中國巴基斯坦合製jf-17戰機故障飛不了.html
@@ -16,11 +16,11 @@ author: 艾格姆
 
 
 
-<p>據緬甸空軍前飛行員稱，這款戰鬥機遇到強大的重力時，機身很容易損壞，尤其是翼尖。由於安裝在 JF-17 上的航空電子設備是用西方國家零件製造的，緬甸軍方在 2015 年至 2020 年期間透過中間商購買戰鬥機。但<strong>軍事政變後，歐盟對緬甸軍方和軍火經紀人施以制裁，導致緬甸空軍現在沒有 JF-17 的零件備料。此外，西方國家所施加的貿易和武器禁運制裁手段也使得緬甸軍政府無法直接為  JF-17 購買飛彈和炸彈。</strong></p>
+<p>據緬甸空軍前飛行員稱，這款戰鬥機遇到高重力（或稱「高 G 力」）動作時，如飛機急拉、翻轉時，機身就很容易損壞，尤其是翼尖。由於安裝在 JF-17 上的航空電子設備是用西方國家零件製造的，緬甸軍方在 2015 年至 2020 年期間透過中間商購買戰鬥機。但<strong>軍事政變後，歐盟對緬甸軍方和軍火經紀人施以制裁，導致緬甸空軍現在沒有 JF-17 的零件備料。此外，西方國家所施加的貿易和武器禁運制裁手段也使得緬甸軍政府無法直接為  JF-17 購買飛彈和炸彈。</strong></p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/cdb45999-2022-12-06-15.34-1024x576.jpg" alt="" class="wp-image-122125" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/cdb45999-2022-12-06-15.34-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/cdb45999-2022-12-06-15.34-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/cdb45999-2022-12-06-15.34-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/cdb45999-2022-12-06-15.34.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國和巴基斯坦聯手打造的JF-17 戰鬥機，以及它能搭載的飛彈和炸彈。<br>圖／CHUCK’S GUIDES – DCS JF-17 THUNDER</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/cdb45999-2022-12-06-15.34-1024x576.jpg" alt="" class="wp-image-122125" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/cdb45999-2022-12-06-15.34-1024x576.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/cdb45999-2022-12-06-15.34-300x169.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/cdb45999-2022-12-06-15.34-768x432.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/cdb45999-2022-12-06-15.34.jpg 1500w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國和巴基斯坦聯手打造的JF-17 戰鬥機，以及它能搭載的飛彈和炸彈。<br>圖／CHUCK’S GUIDES – DCS JF-17 THUNDER</figcaption></figure></div>
 
 
 
