--- a/_posts/2022-12-06-INMEDIA-青衣至大嶼山連接路研究及設計耗7.3億-議員稱驚人.html
+++ b/_posts/2022-12-06-INMEDIA-青衣至大嶼山連接路研究及設計耗7.3億-議員稱驚人.html
@@ -14,6 +14,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/N5705325vh" title="螢幕截圖 2022-12-06 下午9.14.58"><img src="https://live.staticflickr.com/65535/52546825369_a75466fa89_z.jpg" alt="螢幕截圖 2022-12-06 下午9.14.58" /></a></p>
 <p><strong>路政署將擴闊青沙公路 騰兩條行車線空位接駁連接路</strong></p>
 <p>立法會交通事務委員會今日舉行特別會議討論，立法會議員陳紹雄認為研究造價達7.3億「確實有啲驚人」，路政署主要工程管理處處長陸偉雄，費用包括勘查研究及詳細設計，而過往是分別申請撥款，當局做法是希望加快進度，「所以呢，費用大啲」。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1943168gQ0" title="Untitled"><img src="https://live.staticflickr.com/65535/52546850546_6e72010b5e_b.jpg" width="1024" alt="Untitled" /></a><br /><em>立法會議員陳紹雄</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/16W6k4937P" title="無標題"><img src="https://live.staticflickr.com/65535/52546665269_690ea5aeb2_z.jpg" alt="無標題" /></a><br /><em>路政署主要工程管理處處長陸偉雄</em></p>
 <p>連接路往九龍方向只接通南灣隧道，民建聯陳學鋒質疑「起多幾多條橋咪都係塞翻轉頭」，林筱魯亦關注青衣西北交通壓力。路政署表示，當局將會擴寛青沙公路，先把北行道路遷移，在左右兩邊騰出兩條行車線的空位接駁連接路，解決長青公路的擠塞。他又指，長青隧道及南灣隧道暫時的行車量只有0.8 及0.4， 有一定空間承載新增車流，並指將於下階段再重新檢視有關交通研究，「確保唔會因為新嘅（道路）令下游道路產生擠塞」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2ExW60f7ZW" title="無標題"><img src="https://live.staticflickr.com/65535/52485724824_e3b48b0b49_z.jpg" alt="無標題" /></a><br /><em>資料圖片</em></p>
