--- a/_posts/2022-12-05-INITIUM-施明磊的海外流亡生活-重建日常-以更自由的姿态去抗争.html
+++ b/_posts/2022-12-05-INITIUM-施明磊的海外流亡生活-重建日常-以更自由的姿态去抗争.html
@@ -9,7 +9,7 @@ author: 特约撰稿人 Yolanda
 ---
 
 <p>「“政治犯家属到了国外，很少有人能过正常人的生活，我说的正常人生活是当地人的生活，没有恐惧的生活。”」</p><p>特约撰稿人 Yolanda</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221206-mainland-chengyuan-shiminglei-us-life-resistence/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/01ad296017c0448c8d64eb6a17f0aadb.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit">插画：Wilson Tsang</span></figcaption></figure><p><small><strong>【前言】本文由端传媒与NGOCN声音计划联合发布，首发于端传媒。</strong></small></p>
+            <figcaption itemprop="caption"><span class="credit">插画：Wilson Tsang</span></figcaption></figure><p><small><strong>【引言】本文由端传媒与NGOCN声音计划联合发布，首发于端传媒。</strong></small></p>
 <p><small>施明磊决定用一种更自由的姿态去抗争：不必因为压力做过度反应，也不必把自己变成一个孤岛。“因为，僵化的姿态让人没法活出自由。”</small></p>
 <p><small>她是<a href="https://www.hrichina.org/cht/chang-sha-gong-yi-sa">“长沙公益仨”</a>案件中程渊的妻子。36岁的她，从2019年7月至今，经历了丈夫的被囚禁和秘密审判，自己艰苦的维权呼告，以及被迫带着女儿逃离中国的一系列心路。如今的她，正在信仰以及日常生活的重建中，成长为一个越来越强大的女性。</small></p>
 <p>2022年9月，美国北部的一座城市。36岁的施明磊和女儿一起开学了，女儿上幼儿园，她念EMBA。虽然课程紧，作业多，周六上课的时候，还得拜托教会的朋友们照看女儿，但施明磊却很兴奋。班上同学背景五花八门，有退伍军人、ICU医生，还有跟她一样的外国人；在她眼中，这就是个小型的美国社会，她急切地想要了解新家园的一切。</p>
