--- a/_posts/2022-12-07-INMEDIA-六成中學持pgde教師比例下跌-朱國強指因移民潮-教育素質或-打折扣.html
+++ b/_posts/2022-12-07-INMEDIA-六成中學持pgde教師比例下跌-朱國強指因移民潮-教育素質或-打折扣.html
@@ -15,11 +15,13 @@ author: 獨媒報導
 <p><strong>朱國強：移民潮令教師流失  鄧飛：多人想報PGDE惟學額少  </strong></p>
 <p>朱國強認為持教育文憑的教師比例下跌很正常，因移民潮令不少教師，特別是管理層流失。他指出，教育文憑會培養教師的必備能力，「讀了會專業很多」；如有太大量沒讀教育文憑的人成為教師，教師專業承傳和學校運作會有一定影響，教學質素會「打折扣」：「如果減2-3%，整體唔會有咁大影響；但如果多到20%，可能真係會有啲影響。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/516tCK2938" title="無標題"><img src="https://live.staticflickr.com/65535/52507582879_94e1c9665b_c.jpg" width="800" alt="無標題" /></a><br /><em>教育界立法會議員朱國強</em></p>
-<p>另一立法會議員、將軍澳香島中學校長鄧飛則認為，目前有不少人想報讀教育文憑，但因局方預測未來需求減少，課程學額亦減少：「唔係報讀嘅人少，係報得上嘅人比以前慢咗。」他認為即使持教育文憑的教師比例下跌，亦不會影響本地教育素質，指年青老師更容易和學生溝通，「冇咁多代溝」，又指「政府增加返PGDE嘅學額咪得囉，一年到兩年（就讀完），唔係太難嘅事」。</p>
+<p>另一立法會議員、前中學校長鄧飛則認為，目前有不少人想報讀教育文憑，但因局方預測未來需求減少，課程學額亦減少：「唔係報讀嘅人少，係報得上嘅人比以前慢咗。」他認為即使持教育文憑的教師比例下跌，亦不會影響本地教育素質，指年青老師更容易和學生溝通，「冇咁多代溝」，又指「政府增加返PGDE嘅學額咪得囉，一年到兩年（就讀完），唔係太難嘅事」。</p>
 <p>鄧續指，家長要子女離港升學或讀國際學校的原因可以很複雜，「唔一定因為老師」。他又提到，若沒有足夠學生就難以留住教師，因此當局需解決「人口結構性下降」問題，而方法離不開鼓勵生育和引入外來移民，否則「就算冇移民潮，人口都係會減少」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/oEmN334qY8" title="無標題"><img src="https://live.staticflickr.com/65535/52547603497_61763aa1f6_c.jpg" width="800" /></a><br /><em>立法會議員、將軍澳香島中學校長鄧飛</em></p>
 <p><strong>全港中一淨減35班  教育局：出於不同因素</strong></p>
 <p>中一減班方面，今年有44間中學減少共46班中一、11間中學加開共11班中一，全港淨減35班。其中沙田區減少11班，元朗減少6班，另外有8間中學由上學年開辦3班中一，減至今年只開兩班。計劃在2026/27學年遷校的筲箕灣東官立中學，由上學年開4班中一，減至今年只開兩班。</p>
 <p>教育局回覆傳媒指由於不同因素，個別中學年與年之間開辦的中一班級數目或會相應調整，今年中一班數出現變動的原因包括：有學校在9月點算學生人數後需減班、有學校在「擴班」後回復原來的班級數目、有學校今年開始停辦中一、有學校實行「循環式平衡班級結構」，中一班數隔年回復較低的數目。</p>
 <p>局方重申，2025及其後年度中一學齡人口持續下跌的情況屬結構性而非過渡性，已採取多管齊下的措施應對，包括調整每班派位人數，並以「軟著陸」為目標，務實理順學額供求情況。</p>
+<p>【8/12 1630更新】教育局在報導刊出後補充回覆，表示局方密切留意尚未接受師資培訓的教師人數的變化，適時採取適當的措施，維持高質素教師團隊。局方又稱一直審慎規劃師資培訓名額，有見近兩年新入職而未接受師資培訓的教師數目較預期為多，決定向香港大學、香港中文大學和香港教育大學增撥資源，於2023/24及2024/25學年增加指定科目的學位教師教育文憑課程（兼讀制）學額，局方正按既定程序處理有關學額分配和撥款的安排。</p>
+<p>教育局一直致力維持高質素的教師團隊，並審慎規劃師資培訓名額，以每三年一周期制定由政府資助師資培訓課程的整體規劃，而2022/23至2024/25的三年期規劃於2020年進行。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
