--- a/_posts/2022-12-07-INMEDIA-六成中學持pgde教師比例下跌-朱國強指因移民潮-教育素質或-打折扣.html
+++ b/_posts/2022-12-07-INMEDIA-六成中學持pgde教師比例下跌-朱國強指因移民潮-教育素質或-打折扣.html
@@ -17,7 +17,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/516tCK2938" title="無標題"><img src="https://live.staticflickr.com/65535/52507582879_94e1c9665b_c.jpg" width="800" alt="無標題" /></a><br /><em>教育界立法會議員朱國強</em></p>
 <p>另一立法會議員、前中學校長鄧飛則認為，目前有不少人想報讀教育文憑，但因局方預測未來需求減少，課程學額亦減少：「唔係報讀嘅人少，係報得上嘅人比以前慢咗。」他認為即使持教育文憑的教師比例下跌，亦不會影響本地教育素質，指年青老師更容易和學生溝通，「冇咁多代溝」，又指「政府增加返PGDE嘅學額咪得囉，一年到兩年（就讀完），唔係太難嘅事」。</p>
 <p>鄧續指，家長要子女離港升學或讀國際學校的原因可以很複雜，「唔一定因為老師」。他又提到，若沒有足夠學生就難以留住教師，因此當局需解決「人口結構性下降」問題，而方法離不開鼓勵生育和引入外來移民，否則「就算冇移民潮，人口都係會減少」。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/oEmN334qY8" title="無標題"><img src="https://live.staticflickr.com/65535/52547603497_61763aa1f6_c.jpg" width="800" /></a><br /><em>立法會議員、將軍澳香島中學校長鄧飛</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/oEmN334qY8" title="無標題"><img src="https://live.staticflickr.com/65535/52547603497_61763aa1f6_c.jpg" width="800" /></a><br /><em>立法會議員、前中學校長鄧飛</em></p>
 <p><strong>全港中一淨減35班  教育局：出於不同因素</strong></p>
 <p>中一減班方面，今年有44間中學減少共46班中一、11間中學加開共11班中一，全港淨減35班。其中沙田區減少11班，元朗減少6班，另外有8間中學由上學年開辦3班中一，減至今年只開兩班。計劃在2026/27學年遷校的筲箕灣東官立中學，由上學年開4班中一，減至今年只開兩班。</p>
 <p>教育局回覆傳媒指由於不同因素，個別中學年與年之間開辦的中一班級數目或會相應調整，今年中一班數出現變動的原因包括：有學校在9月點算學生人數後需減班、有學校在「擴班」後回復原來的班級數目、有學校今年開始停辦中一、有學校實行「循環式平衡班級結構」，中一班數隔年回復較低的數目。</p>
