--- a/_posts/2022-12-08-VOCUS-烏克蘭史-8-從蘇維埃走向獨立.html
+++ b/_posts/2022-12-08-VOCUS-烏克蘭史-8-從蘇維埃走向獨立.html
@@ -77,7 +77,7 @@ author: 黎胖
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">結語</span></div>
 <div class="draft-block draft--p left">烏克蘭從1919年進入蘇聯，期間歷經建國、政治清洗、大饑荒、大屠殺、對民族文化的消滅、俄羅斯化、車諾比核災等重大事故，到1991年終於擺脫蘇聯宰制、走向真正的獨立，歷經72年，而若從1654年佩列亞斯拉夫條約簽署的時間起算，則是歷經337年。</div>
 <div class="draft-block draft--p left">烏克蘭花了334年，終於完成建立獨立且自由的民族國家，由烏克蘭民族的政治人物和行政官僚來管理這個國家，不再犯下從博赫丹、馬澤帕、維尼琴科、彼得留拉等人的錯誤。烏克蘭在蘇聯內部的成長茁壯，沒有放棄努力，不斷地在極權帝國中把握能夠自我成長的機會，讓烏克蘭化持續進行，以重建民族文化，並培育出足以在獨立時機來臨時，使國家穩定運作、維繫各方平衡的政治體制、行政官僚與政治人物，這讓烏克蘭在面臨1991年作為一個國家，作為政治、經濟、文化、法律等體制組合體的蘇聯解體帶來的衝擊時，能夠維持國家的運作，並攜手共創未來。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/RNrPLKLaN8c"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/RNrPLKLaN8c"></iframe></div>
 <div class="draft-block draft--p left">俄羅斯本想掌管蘇聯，但是遭到其他國家抵制而失敗，隨後俄羅斯又希望烏克蘭不要離開俄羅斯。但是烏克蘭徹底回絕俄羅斯的要求，原因無他，烏克蘭終於贏得自己所要的：獨立、自由、民族與領土統一的主權國家。他們不再需要像祖先一樣，因為無法在國際生存，而向俄羅斯卑躬屈膝，此時的俄羅斯也因身陷蘇聯解體的混亂，即使想建立一個「俄羅斯自由帝國」，俄羅斯也不夠強大到足以迫使烏克蘭加入俄羅斯。</div>
 <div class="draft-block draft--p left">對於台灣來說，烏克蘭被迫納入俄羅斯和蘇聯的領土，並被視為俄羅斯民族統一不可分割的一部分，猶如自身當初被納入中華民國領土，至今仍被視作中華人民共和國領土一部分一樣。不過，烏克蘭藉此成長茁壯，培育出本土人才，掌握政治震盪帶來的契機，走向獨立，並維持國家不墜，這正是對我們的啟示。</div>
 <div class="draft-block draft--p left">在中華民國政府的體制下，我們已經培育出了一個擁有大量政治人才的政黨民進黨、能夠維持國家運作的文官體系與政治制度，我們將在政治契機來臨時，直接脫胎換骨，成為一個真正被稱為台灣的國家，而不會像1918年烏克蘭人民共和國因為沒有人才與經驗，而導致獨立失敗，走向滅亡，而將會巍然聳立於國際，成為國際承認的主權獨立國家。</div>
