--- a/_posts/2022-12-08-VOCUS-解決問題前要先認識問題-1.html
+++ b/_posts/2022-12-08-VOCUS-解決問題前要先認識問題-1.html
@@ -15,7 +15,7 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">追究下去，可能會發現，是工廠選擇系統，挑了最便宜的。所以我們會認為，這就是貪小便宜的代價，但是其他工廠也挑這款，卻沒有出問題啊？再說貪小便宜，設備商也是通過檢驗合格。然後我們看到，維修保養不確實，似乎又是貪小便宜，但看了看工廠的營收，顯然可以理解老闆不想花錢在這上面的理由。</div>
 <div class="draft-block draft--p left">接著去開會，跟老闆談這問題，最後往往不了了之。有人會怪老闆只想省錢，但如果是這樣，就不會來跟我們開會，而是直接要處理商想辦法。顯然是我們提的解決方案，老闆無法接受，而不接受的理由，真的就只是錢？</div>
 <div class="draft-block draft--p left">筆者的經驗是，的確是為了錢，但問題不是老闆只想省錢，哪個老闆不想省，而是這位工廠甲的老闆，對於省錢的想法太表面。他願意花錢在生產機具上，因為是看得見的收入，汙染相關設備花錢，卻無法反映在帳本上，就心態上是老闆對於收支的認知有問題。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/QYwHw0qGZPk"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/QYwHw0qGZPk"></iframe></div>
 <div class="draft-block draft--p center">前現代社會常有的問題（編）</div>
 <h3 class="draft-block draft--h3" name="header-3fam9">問題可能出在新觀念不是人人能接受</h3>
 <div class="draft-block draft--p left">喔喔，到這步，或許有讀者也發現，曾經有類似的經歷。有的老闆算帳時，會把罰款也算進去，看一個整體成本，有的則是分開去看，也有只看短期不看長期，總之一種米養百樣人，同樣工廠也有很多種老闆。</div>
@@ -39,4 +39,3 @@ author: 王立第二戰研所
 <div class="draft-block draft--p left">這就是認識問題本身弄錯，但「歸零射擊」這件事情，從分析到解決，有任何錯誤？沒有，單純就只是敵軍都打到家門口，現在是先求有再求好。</div>
 <div class="draft-block draft--p left">筆者這些年慢慢想提倡「認識問題」，理由在此。</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/96dc84f9-7a41-458b-b4bb-3137dd90ceeb.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">解決不了問題那就……先去認識問題啦！（編）</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
