--- a/_posts/2022-12-09-INMEDIA-張宇人-中大生畢業禮示威-目無尊長-不應-姑息養奸-促踢出校.html
+++ b/_posts/2022-12-09-INMEDIA-張宇人-中大生畢業禮示威-目無尊長-不應-姑息養奸-促踢出校.html
@@ -13,7 +13,7 @@ author: 獨媒報導
 <p>中大上月底舉行學士學位典禮，期間有數名學生在校園本部「烽火台」身起黑色垃圾袋製成的畢業袍，手持「針大通」學生證模型、自製「畢業證書」等道具示威，又抗議「最後一屆SU選民」。保安到場後包圍學生，雙方一度發生爭執，其後警方接報到場並登記學生的個人資料，最終無人被捕。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/P4W3Vv37PL" title="無標題"><img src="https://live.staticflickr.com/65535/52519910042_64c5dbaa03_b.jpg" width="1024" alt="無標題" /></a><br /><em>學生被保安包圍（資料圖片）</em></p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5qS1K2RK93" title="無標題"><img src="https://live.staticflickr.com/65535/52520659619_8ab3254020_b.jpg" width="1024" alt="無標題" /></a><br /><em>警方接報到場，登記學生的個人資料（資料圖片）</em></p>
-<p>校董之一、自由黨立法會議員張宇人今日在報章撰寫命名《我為人人|姑息養奸有違教育之本》的文章，炮轟在畢業禮上示威的學生質素低劣。他形容涉事學生上演「自編、自導、自演的一場鬧劇」，貼滿一身抗議標語贈興；他指大學生對社會和政府有訴求是人之常情，以較激烈手法爭取的訴求理應較宏觀，但學生的口號卻令他「搖頭歎息」：「全都是關於個人生活要求等低檔次與搔癢式訴求，諸如甚麼『合資格社畜』、』CUEX沙紙交易所』」，斥訴求不堪入目。</p>
+<p>校董之一、自由黨立法會議員張宇人今日在報章撰寫命名《姑息養奸有違教育之本》的文章，炮轟在畢業禮上示威的學生質素低劣。他形容涉事學生上演「自編、自導、自演的一場鬧劇」，貼滿一身抗議標語贈興；他指大學生對社會和政府有訴求是人之常情，以較激烈手法爭取的訴求理應較宏觀，但學生的口號卻令他「搖頭歎息」：「全都是關於個人生活要求等低檔次與搔癢式訴求，諸如甚麼『合資格社畜』、』CUEX沙紙交易所』」，斥訴求不堪入目。</p>
 <p>他批評學生以粗言穢語辱罵保安，又提到類似鬧劇以前都曾發生，「令人氣憤的是每次都是由一小撮人騎劫了整個畢業典禮」，認爲學生不尊重學校、師長，亦有愧父母及自己，「是何等自私自利、目無尊長！」</p>
 <p><strong>批「上樑不正下樑歪」促校方褫奪學生畢業資格</strong></p>
 <p>中大校長段崇智近年屢被建制派追擊，應對2019年反修例運動態度欠強硬，其中前特首梁振英曾斥「段崇智的問題是嚴重的政治問題」。張宇人月前亦批評中大管治架構充滿利益衝突，正副校長獨攬大權，故擬提出私人草案，包括校董會主席應由特首委任，以杜絕任何「裙帶關係」 。</p>
