--- a/_posts/2022-12-09-INMEDIA-走入社區-在獨立書店讀劇-首個演出-adam-探討記憶與遺忘.html
+++ b/_posts/2022-12-09-INMEDIA-走入社區-在獨立書店讀劇-首個演出-adam-探討記憶與遺忘.html
@@ -29,7 +29,7 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/F24DL9kZ2g" title="《Adam》綵排過程"><img src="https://live.staticflickr.com/65535/52548071436_144068711a_c.jpg" width="800" alt="《Adam》綵排過程" /></a><br /><em>《Adam》綵排過程</em></p>
 <p><strong>筆記紙被撕爛的年代：記憶將長存我們心中</strong></p>
 <p>這幾年，香港經歷大型社運、疫情爆發、移民潮等，導演陳瑞琦認為，人在大時代裡容易迷失：「這種『lost』是很普遍地出現。」梁永冲回應指：「是的，這幾年社會也有很多關於記憶的討論。有些事我不想忘記，但有些事又好想忘記…… 這種日子上演很有共鳴，很配合環境。」</p>
-<p>《Adam》劇本裡，一個小丑嬉曾微笑著對主角亞當說：「咁啊，你忘記曬啲傷心嘢，跟住開心返咪得囉！」亞當搖頭不認同。</p>
+<p>《Adam》劇本裡，一個小丑曾微笑著對主角亞當說：「咁啊，你忘記曬啲傷心嘢，跟住開心返咪得囉！」亞當搖頭不認同。</p>
 <p>梁永冲長嘆一聲：「過去三年社會發生很多事，有時也覺得很灰心、失望，覺得不如忘記它吧，做隻甚麼都不理的豬仔…… 但我又覺得不應該把重要的事忘記。始終那段時間很多人經歷痛苦，我想藉劇本帶出的其中一個訊息是，讓他們知道自己『有被記住，不是一個人』。」</p>
 <p>但到底如何做才能把傷痕與悲痛記住？陳瑞琦認為是「要對自己誠實」—— 「不要否定發生過的事，無論你同意與否，都坦誠面對自己感受。」</p>
 <p>劇本有一幕，是其中一個角色把主角筆記用的紙撕爛，因為他不需要了，一切記憶都長存在他心中。陳瑞琦說：「『記得』不是字面意思，是有成為我一部分。」</p>
