Update VOCUS 2022-12-11 patch

--- a/_posts/2022-12-10-VOCUS-文林銀行-小學生領薪怎麼花.html
+++ b/_posts/2022-12-10-VOCUS-文林銀行-小學生領薪怎麼花.html
@@ -49,4 +49,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">實際上這也符合當今我們長大真的實際賺錢用錢後，才對於這社會性的金錢交易有實際的感觸。文林銀行雖然不完美，但在寓教於樂上，算是很不錯的教學概念。</div>
 <div class="draft-block draft--p left">在實行文林銀行時，有些學校家長、老師，或網路上都有不支持的聲音，他們擔心的狀況有很多：擔心金錢交易會觸法、讓學生做事變得功利、也認為應該要有更多討論。</div>
 <div class="draft-block draft--p left">但其實大家都認同讓孩子提早有金錢觀是一件好事，而紀錄片《文林銀行》其實就是一個模擬制度的實驗，如何讓這個實驗變得更能讓孩子體會其中賺錢不易，除提出問題外，也須有解決門道才會使這樣的實驗計畫更加完善。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/HVjyjmr2OGg&amp;t=116s"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/HVjyjmr2OGg"></iframe></div>
