--- a/_posts/2022-12-10-VOCUS-洪醒夫斯基-名為流星.html
+++ b/_posts/2022-12-10-VOCUS-洪醒夫斯基-名為流星.html
@@ -14,7 +14,6 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">文壇流星！洪醒夫老師（本名：洪媽從，1949 - 1982），12月10日知名壽星。</div>
 <div class="draft-block draft--p left">作為後二戰時代的寶島鄉土小說名家之一，洪醒夫先生出生於彰化縣二林的貧窮農村。在當年各項物資匱乏，解救大陸同胞的標語四處可見，且升學不是唯一選項的氛圍下，他苦讀進入了台中師專⋯⋯</div>
 <div class="draft--imgFloat draft-block"><div><img src="https://images.vocus.cc/54f96df2-8eb6-46dc-ac36-8b0e58d70fbe.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.tlvm.com.tw/zh/Theme/ExhibitionArticleCont?Exbid=129</figcaption></div></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">修習畢業後，洪先生選擇回到鄉下，於台中神岡的社口國小擔任老師，在晨昏鐘響與孩童們的嘻鬧聲中，他默默地從事教育工作，也一邊提筆寫作……</div>
 <div class="draft-block draft--p left">是的！打從18歲那年開始，他似乎<span style="font-weight: bold; ">不去追尋戀愛學分，或是慘綠少年的迷惘徬徨與意氣風發，洪老師投稿報刊、創辦雜誌、參與詩社與編輯文選</span>；</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/105d937a-1750-4ed5-88a0-de2a70f25c65.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">https://www.tlvm.com.tw/zh/Theme/ExhibitionArticleCont?Exbid=129</figcaption></div></div>
@@ -56,8 +55,7 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left"><span style="font-style: italic; ">「你不要妄想！……就是你逼我唱，我死也不唱，看你這小小的開封府尹，又怎麼奈何得了本宮！」</span></div>
 <div class="draft-block draft--p left">不必刻意去學，那口氣就是陳世美的口氣，字正腔圓，功力十足。</div>
 <div class="draft-block draft--p left">其他人聽了，都哈哈大笑，鬧成一團。只有金發伯默不作聲，他低垂著頭，抽著紙煙。秀潔抑制著內心的激動，轉頭去看戲臺。在剛暗下來的天色裡，猶未燃燈的單薄的戲臺，便在她的眼中逐漸糢糊起來。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/kFifUeQQ5-k"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/kFifUeQQ5-k"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">這最後一段的書寫功力，毫無疑問，<span style="font-weight: bold; ">不可抹滅的經典。</span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
@@ -65,4 +63,3 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <div class="draft-block draft--p left">〈人間苦難的見證者〉，高天生《洪醒夫集》，前衛出版社，國中國文教師手冊第一冊</div>
 <div class="draft-block draft--p left">臺中作家典藏館</div>
 <div class="draft-block draft--p left">國立台灣文學館</div>
-<div class="draft-block draft--p left"></div>
