--- a/_posts/2022-12-10-PQ-俄羅斯-無法兌現的神話-自我催眠的帝國.html
+++ b/_posts/2022-12-10-PQ-俄羅斯-無法兌現的神話-自我催眠的帝國.html
@@ -18,7 +18,7 @@ author: 陸 瑪丁
 <p>加列耶夫從俄國的歷史演進開始，並觀察了俄羅斯自我催眠式的思維，以及在俄烏戰爭中進行的戰略，進而提出俄帝國即將潰堤的預測。</p>
 </p>
 <div class="wp-block-image">
-<figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/71836af6-kamil-galeev（圖／wilsoncenter）.jpeg" alt="" class="wp-image-122449" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/71836af6-kamil-galeev（圖／wilsoncenter）.jpeg 480w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/71836af6-kamil-galeev（圖／wilsoncenter）-300x300.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/71836af6-kamil-galeev（圖／wilsoncenter）-150x150.jpeg 150w" sizes="(max-width: 358px) 100vw, 358px" /><figcaption>威爾遜中心研究員加列耶夫對俄國的戰略提出分析及預測（圖／wilsoncenter）</figcaption></figure>
+<figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/71836af6-kamil-galeev（圖／wilsoncenter）.jpeg" alt="" class="wp-image-122449" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/71836af6-kamil-galeev（圖／wilsoncenter）.jpeg 480w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/71836af6-kamil-galeev（圖／wilsoncenter）-300x300.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/71836af6-kamil-galeev（圖／wilsoncenter）-150x150.jpeg 150w" sizes="(max-width: 358px) 100vw, 358px" /><figcaption>威爾遜中心研究員加列耶夫對俄國的戰略提出分析及預測（圖／wilsoncenter）</figcaption></figure>
 </div>
 <h2>被神話催眠的俄帝國　對烏克蘭戰略失敗將造成史無前例的重創</h2>
 </p>
