--- a/_posts/2022-12-11-INMEDIA-何時取消安心出行-李家超-正全面檢視-盧寵茂-會繼續維持住有.html
+++ b/_posts/2022-12-11-INMEDIA-何時取消安心出行-李家超-正全面檢視-盧寵茂-會繼續維持住有.html
@@ -8,7 +8,9 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/2022121105.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>被問何時取消安心出行 李家超：已和醫務局商討可全面檢視</p>
+<img src="https://www.inmediahk.net/files/column_images/2022121105.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>內地近日公布放寬防疫措施，大部分場所不用掃健康碼，澳門明起進入公共場所亦毋須掃碼。社會關注本港何時可取消「安心出行」及疫苗通行證，特首李家超今表示，已和醫務衞生局商討，認為新情況下可全面檢視措施，但仍需視乎數據及風險等綜合考慮。醫衛局局長盧寵茂則表示，會繼續監察安心出行運作，適當時或調整，但強調安心出行是「非常之好」的程式，未來疫症若重現，發揮的作用會再提升，會「繼續維持住有」。</p>
+<p>至於袁國勇團隊、港大微生物學系臨床助理教授薛達（Siddharth Sridhar），昨則在社交平台撰文，要求當局取消安心出行、疫苗通行證、強制檢測公告、學校每日快測、及「0+3」入境檢疫5項措施，指安心出行已失追蹤感染源頭原意。</p>
+<p><strong>被問何時取消安心出行 李家超：已和醫務局商討可全面檢視</strong></p>
 <p>特首李家超今視察緊急交通事故協調中心後會見傳媒，被問到何時可取消安心出行，李家超指已和醫務衞生局商討，認為新情況下可全面檢視現行措施，研究有何措施可作適當調較，又指醫務衞生局正積極研究，相信很快會提交報告。</p>
 <p>李家超又表示，一向按風險精準調較抗疫措施，而現時限制措施已「減少到好多，只剩下幾樣」，包括安心出行和疫苗通行證，目的是確保市民健康和安全。他表示，雖盡量希望恢復社會經濟活動，但仍要檢視數據和趨勢等，而最近確診數字「上升得好犀利」、死亡個案亦開始上升，醫療體系出現壓力，需綜合考慮。</p>
 <p><strong>盧寵茂：續監察或作調查 未來疫症重現安心出行可發揮作用</strong></p>
