--- a/_posts/2022-12-12-PQ-2022台獨聯盟民調-保家衛國成優先選項-中華民國台灣認同大幅超越台灣人認同.html
+++ b/_posts/2022-12-12-PQ-2022台獨聯盟民調-保家衛國成優先選項-中華民國台灣認同大幅超越台灣人認同.html
@@ -24,7 +24,7 @@ author: 潘柏廷
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-1024x683.jpg" alt="" class="wp-image-122598" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣安保協會理事長謝若蘭。圖／潘柏廷拍攝</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-1024x683.jpg" alt="" class="wp-image-122598" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-1536x1025.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/e04d2b8a-img_0709-2048x1367.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>台灣安保協會理事長謝若蘭。圖／潘柏廷拍攝</figcaption></figure></div>
 
 
 
@@ -104,7 +104,7 @@ author: 潘柏廷
 
 
 
-<p>「此次民調主要環繞在於『抗中保台』」楊宗澧認為，在此次「台灣人認同」民調中，「台灣人認同」與「中華民國台灣人認同」有流動趨勢，「台灣人認同」走向「中華民國台灣認同」的移動，楊宗澧提出，鑒於民進黨在 2016 年執政推動的「中華民國台灣」下，<strong>如果民進黨總統候選人是現任副總統賴清德，是否能有更進步的論述，以及面對如何中華民國台灣認同，對於民進黨總統候選人是重要課題。</strong></p>
+<p>「此次民調主要環繞在於『抗中保台』」楊宗澧認為，在此次「台灣人認同」民調中，「台灣人認同」與「中華民國台灣人認同」有流動趨勢，「台灣人認同」走向「中華民國台灣認同」的移動，楊宗澧提出，鑒於民進黨在 2016 年執政推動的「中華民國台灣」下，<strong>如果民進黨總統候選人是現任副總統賴清德，是否能有更進步的論述，如何讓台灣認同逐漸地取代中華民國台灣認同，是 2024 年民進黨重要課題。</strong></p>
 
 
 
