--- a/_posts/2022-12-12-INMEDIA-政府-優化-環評-程序-壓縮-一半至18至24個月.html
+++ b/_posts/2022-12-12-INMEDIA-政府-優化-環評-程序-壓縮-一半至18至24個月.html
@@ -19,4 +19,6 @@ author: 獨媒報導
 <p>政府訂立2050年碳中和目標，香港新方向張欣宇及民建聯葛佩帆皆問及會否將氣候變化影響納入評估範圍。環境保護署副署長徐浩光指現時沒有碳中和標準，無法納入環評。</p>
 <p>環境及生態局在會上表示，中央數據庫已完成得「八八九九」，預計本月正式投入使用。當局將每年更新一次政府負責的數據，如水質、生態資料，並加入非政府統計但受國際認可的數據。資料目前由政府內部及顧問公司人員進行，內部開支約300萬，其後每年開支約200萬。</p>
 <p>工聯會勞工界郭偉強批評，過去違反《環評條例》的平均罰款是3千至6千元，認為罰款過低，署方則指現時罰則已高，首次定罪最高可處罰款200萬元及監禁6個月。</p>
+<p><strong>香港地球之友：降須進行環評發展規模違《條例》目的</strong></p>
+<p>香港地球之友發新聞稱，表示中央環境數據庫（CED）只能供顧問作輔助參考，並不能取代專業的環境影響評估。他們亦認為，將需進行環評的發展規模上調，有違《環評條例》的預設目的，亦未有與時並進。此外，目前環評由私人公司聘請顧問進行，香港地球之友認為欠缺公平性，促加強環境諮詢委員會監督職感，預留資源予環諮會另聘獨立公司，就報告準確性作評估。</p>
 </div></div></div>
