--- a/_posts/2022-12-12-PQ-越南首辦軍武國際展-展現武器採購多元化-擺脫俄羅斯決心.html
+++ b/_posts/2022-12-12-PQ-越南首辦軍武國際展-展現武器採購多元化-擺脫俄羅斯決心.html
@@ -16,7 +16,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/8402d17d-vndefence-2022.jpg" alt="" class="wp-image-122702" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/8402d17d-vndefence-2022.jpg 813w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/8402d17d-vndefence-2022-300x206.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/8402d17d-vndefence-2022-768x526.jpg 768w" sizes="(max-width: 813px) 100vw, 813px" /><figcaption>2022 年越南國際國防展覽（Vietnam Defence 2022）<br>圖／EIFEC</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/8402d17d-vndefence-2022.jpg" alt="" class="wp-image-122702" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/8402d17d-vndefence-2022.jpg 813w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/8402d17d-vndefence-2022-300x206.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/8402d17d-vndefence-2022-768x526.jpg 768w" sizes="(max-width: 813px) 100vw, 813px" /><figcaption>2022 年越南國際國防展覽（Vietnam Defence 2022）<br>圖／EIFEC</figcaption></figure></div>
 
 
 
