--- a/_posts/2022-12-12-INMEDIA-裕民坊最後鐘錶匠不獲發牌-嘆食環署趕盡殺絕.html
+++ b/_posts/2022-12-12-INMEDIA-裕民坊最後鐘錶匠不獲發牌-嘆食環署趕盡殺絕.html
@@ -12,13 +12,13 @@ author: 獨媒報導
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2gFmz2551C" title="無標題"><img src="https://live.staticflickr.com/65535/52559138185_27d169fdf7_b.jpg" width="1024" alt="無標題" /></a></p>
 <p><strong>佘先生爭取牌照六年未果</strong></p>
 <p>從事鐘錶維修30多年的佘永盛，在裕民坊開檔逾20多載，除了維修電子手錶，更懂維修古董手錶。在他的小木車內，他翻一翻膠袋，便能掏出幾個過60年歷史的古董錶。食環署曾在2009年進行全港工匠調查，惟當時佘先生碰巧離港而未獲紀錄。</p>
-<p>自2016年起，佘先生一直爭取獲發工匠牌，曾向時任立法會議員黃國興及柯創盛、現任立法會議員鄧家彪等求助，至今六年未果。</p>
+<p>自2016年起，佘先生一直爭取獲發工匠牌。2016年9月，食環署<a href="https://www.districtcouncils.gov.hk/kt/doc/2016_2019/tc/committee_meetings_doc/EHC/10261/EHC_17_2016.pdf">曾向觀塘區議會提交文件</a>，指署方自1970年起，已不再簽發新的小販牌照，而因應觀塘區重建，查知有5名「無牌」工匠有意繼續經營，並建議遷移，惟及後因地點問題一直拖延。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/dBu8BT49XU" title="無標題"><img src="https://live.staticflickr.com/65535/52558976314_72ccc3923a_b.jpg" width="1024" alt="無標題" /></a><br /><em>佘先生</em></p>
 <p>隨著裕民坊在2019年起重建，佘先生先後在區內搬遷四次，如今須在重建地盤外工作，不時被食環署人員驅趕，原本鎖在路邊的數張櫈和一架手推車更在昨日被移除。佘先生指自己樂於服務街坊，社會上亦有需求，「我24小時都唔夠用啊，唔係淨係特首唔夠時間用，我都做到過晒鐘」，強調不會放棄，「堅持到發牌嘅一刻」，嘆道「最後四個字，欲哭無淚！」</p>
 <p>「活在觀塘」專頁創辦人袁智仁表示，食環署近月不斷巡查，更在上周預告會在今日到場發告票及清場。他無奈指，2009年的工匠調查至今未曾更新，一直將佘先生排除在外。他強調早在1999年，《壹週刊》已曾訪問佘先生，可見他一早已是鐘錶匠，亦有當年的小販任證人，親睹對方在裕民坊工作逾20年。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/0i37V16xfA" title="小販四哥（左）"><img src="https://live.staticflickr.com/65535/52558213052_77d732d7f6_b.jpg" width="1024" alt="小販四哥（左）、「活在觀塘」專頁創辦人袁智仁（右）" /></a><br /><em>小販四哥（左）、「活在觀塘」專頁創辦人袁智仁（右）</em></p>
 <p><strong>活在觀塘：盼可安置至裕民市集</strong></p>
-<p>下午三時「時限到」，惟食環署人員未有現身。余先生與「活在觀塘」成員拉起橫額，先到位於裕民坊商場底座的「裕民市集」。袁智仁指著一排空置檔口的鐵閘，指市集足足有20檔空置，「點解有20個空置，而家仲要佢（佘生）喺街頭度面對沙塵滾滾？」「活在觀塘」負責人馮炳德表示，原在裕民坊開業的「福嫂補鞋」獲安置至市集，促請食環署酌情處理。</p>
+<p>下午三時「時限到」，惟食環署人員未有現身。余先生與「活在觀塘」成員拉起橫額，先到位於裕民坊商場底座的「裕民市集」。袁智仁指著一排空置檔口的鐵閘，指市集足足有20檔空置，「點解有20個空置，而家仲要佢（佘生）喺街頭度面對沙塵滾滾？」「活在觀塘」負責人馮炳德表示，原在街頭營業的「<a href="https://www.inmediahk.net/node/1078498">福嫂補鞋</a>」並獲安置至市集，促請食環署酌情處理。</p>
 <p><strong>拉橫額赴食環署請願</strong></p>
 <p>眾人及後走到位於瑞和街市政大廈的觀塘區環境衞生辦事處，沿途高呼「還我工匠牌」、「食環請收手」口號，有途人打氣支持。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/5117F7A0FK" title="無標題"><img src="https://live.staticflickr.com/65535/52558680106_9cf3bc4470_b.jpg" width="1024" alt="無標題" /></a></p>
