Update VOCUS 2022-12-13 patch

--- a/_posts/2022-12-11-VOCUS-不搖就滾-低頻聲波讓你聞音起舞~.html
+++ b/_posts/2022-12-11-VOCUS-不搖就滾-低頻聲波讓你聞音起舞~.html
@@ -8,7 +8,6 @@ tags: blog
 author: 陳政佑
 ---
 
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-cmj05">跟著音樂跳起來！現場演出魅力滿滿</h3>
 <div class="draft-block draft--p left">　　大家好，我是菜編。各位有參加過現場音樂演出嗎？在音樂祭或是演唱會之類的場合，除了有臺上的熱情演出外，<span style="font-weight: bold; ">總會見到一群人在臺下搖頭晃腦</span>，以前我很難想像他們在幹嘛，但在今年參加的幾場演出中，我發現自己竟也不自覺地跟著舞動，跟著恐龍的皮搖擺，順著大象體操的音樂跳躍，血肉果汁機的熱血貫穿我心，雖然還不敢跑進去衝撞，但跟著音樂倒是跳好跳滿。</div>
 <blockquote class="draft-block draft--blockquote">為什麼現場演出有讓人跳起來的神奇魔力呢？</blockquote>
@@ -17,17 +16,15 @@ author: 陳政佑
 <h3 class="draft-block draft--h3" name="header-3438p">跟著低頻聲波跳起來？我沒辦法控制自己啦~</h3>
 <div class="draft-block draft--p left">　　人類能聽到的聲音範圍約20-20000Hz，部分蝙蝠用以定位的超聲波（高於20000Hz），或是大象用來進行遠距溝通的次聲波（低於20Hz），都落在我們沒辦法聽到的範圍。不過，雖然說是聽不到，<span style="font-weight: bold; ">我們依舊能接收低頻聲波，甚至在無意識的狀態下，不自覺跳起舞來？</span>Laurel J. Trainor 博士的團隊在 LIVE Lab，與加拿大當地的音樂二重奏 Orphx 合作， 進行了一個現場演出實驗，他們藉由開關介於聽覺邊界的聲音（8–37 Hz），研究這些沒辦法意識到的「聲音」，是否是會讓人特別想跳起舞來的原因。</div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">Orphx 的 Spotify 頁面</span></div>
-<div><iframe allowfullscreen src="https://open.spotify.com/artist/4mNIz9D4L2JGnpUmkvMFMV?autoplay=true"></div>
+<div><iframe allowfullscreen src="https://open.spotify.com/artist/4mNIz9D4L2JGnpUmkvMFMV?autoplay=true"></iframe></div>
 <div class="draft-block draft--p left">　　他們偵測了參加者的頭部移動距離，發現在<span style="font-weight: bold; ">有開啟低頻聲波</span>的時候，參加者們確實<span style="font-weight: bold; ">比較會搖頭晃腦</span>，而且確實是「<span style="font-weight: bold; ">無意識</span>」的影響，因為從實驗前後的體感調查得知，雖然受試者覺得有因為低頻聲波而比較想跳舞，但用同樣的音樂在非實驗場合卻沒有得到類似的答案，而且後來他們做了另一個實驗，讓受試者猜聽到的音檔哪個有低頻聲波，結果他們根本分不出來！</div>
 <div class="draft--imgNormal draft-block"><div><img src="https://images.vocus.cc/831ebaf0-fca6-4aa8-8e29-0b77b452f439.jpg"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">A、B：現場演出照片<br>C：橘線是有開低頻聲波的圖，藍線可以看到低頻波段減弱許多<br>D：低頻波跟完整音檔的聲波圖<br>E：低頻聲波開啟(VLF ON) 比 關閉(VLF OFF) 時舞動得多<br>F：人們舞法判斷哪個音檔有低頻聲波<br>(Cameron et al., 2022)</figcaption></div></div>
 <h3 class="draft-block draft--h3" name="header-a3n0l">試試看？依科學研究炒熱舞台</h3>
 <div class="draft-block draft--p left">　　由實驗我們可以知道，低頻的聲波確實能增進人類的舞動意願，科學家普遍認為，雖然我們的聽覺系統無法接收到這些振動，但仍可透過<span style="font-weight: bold; ">前庭跟振動觸覺系統接收到</span>，所以各位看到這篇文章的音樂人（會有嗎？），可以考慮在創作時加入低頻聲波試試看，可以讓聽眾跳得更起勁喔！</div>
 <div class="draft-block draft--p center">分享一個很喜歡的團給大家，<span style="font-weight: bold; ">大象體操</span>超級讚！</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/jDDy-Vh55to"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/jDDy-Vh55to"></iframe></div>
 <h3 class="draft-block draft--h3" name="header-143u0">資料來源：</h3>
 <div class="draft-block draft--p left">Cameron, D. J., Dotov, D., Flaten, E., Bosnyak, D., Hove, M. J., &amp; Trainor, L. J. (2022). Undetectable very-low frequency sound increases dancing at a live concert. Current Biology: CB, 32(21), R1222–R1223.</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">追蹤我個人的粉專→</span><a href="https://www.facebook.com/brainhavemouth" target="_blank" class="draft--a">https://www.facebook.com/brainhavemouth</a><br><span style="font-weight: bold; ">追蹤Sky in the wall</span>→<a href="https://www.facebook.com/skyinthewall" target="_blank" class="draft--a">https://www.facebook.com/skyinthewall</a></div>
 <h2 class="draft-block draft--h2" name="header-dbf5g"><span style="font-weight: bold; ">喜歡我的文章按讚追蹤加分享！或是斗內起來！</span></h2>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">也能在留言處提出你的看法喔！</span></div>
