--- a/_posts/2022-12-11-VOCUS-魚之子-魚什麼的最喜歡了.html
+++ b/_posts/2022-12-11-VOCUS-魚之子-魚什麼的最喜歡了.html
@@ -50,4 +50,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">導演放了很多時間在介紹美寶的成長與周遭的人物角色塑造，但也因如此後面推進的方式變得很公式化，像是與學生時代的人物相遇的梗就幾乎涵蓋所有後半的情節，多了讓人無趣，甚至降低故事讓人感動的情緒醞釀。</div>
 <div class="draft-block draft--p left">整體而言我雖然喜歡導演這種注意細節，在乎每個配角人物與主角牽絆的過程，但在電影整體的節奏上學生時代和成人時代，我覺得要有更多取扯來讓電影變得輕快且明朗。</div>
 <div class="draft-block draft--p left">要說在電影中我最喜歡的，應該就是導演透過美寶的母親，在裡面展現出支持孩子興趣這一塊，並且謝謝美寶沒有放棄一直喜歡魚這件事，一種很理想也很期許的，背後推一把永遠支持的手。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/DuVqFCfaoiA"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/DuVqFCfaoiA"></iframe></div>
