--- a/_posts/2022-12-13-PQ-封殺tiktok-抖音-小紅書-羅秉成-公務員若違反將依規定懲處.html
+++ b/_posts/2022-12-13-PQ-封殺tiktok-抖音-小紅書-羅秉成-公務員若違反將依規定懲處.html
@@ -12,7 +12,7 @@ author: 林志鴻
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese-1024x683.jpg" alt="" class="wp-image-37858" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese.jpg 1980w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>短影音平台 TikTok 近來成為資安輿論焦點／圖：報呱製圖。</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese-1024x683.jpg" alt="" class="wp-image-37858" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2020/09/71f24129-tik-tok-chinese.jpg 1980w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>短影音平台 TikTok 近來成為資安輿論焦點／圖：報呱製圖。</figcaption></figure></div>
 
 
 
