--- a/_posts/2022-12-13-INITIUM-族群-经济-民主成就-哪些因素影响台湾人为台而战的意愿.html
+++ b/_posts/2022-12-13-INITIUM-族群-经济-民主成就-哪些因素影响台湾人为台而战的意愿.html
@@ -9,16 +9,7 @@ author: 谢达文
 ---
 
 <p>「即使台湾人未必喜欢在现在的兵役制度下当兵、接受“教育召集”，然而就“意愿”来说，台湾确实有推动全民防卫的空间。」</p><p>谢达文</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20221214-taiwan-fight-for-country/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/12/ab7fd35b06924549aef66275ab0257da.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2021年12月18日，高雄左营海军基地，士兵接受为期十周的训练，成为台湾海军陆战队两栖侦搜大队。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2021年12月18日，高雄左营海军基地，士兵接受为期十周的训练，成为台湾海军陆战队两栖侦搜大队。<span class="credit">摄：Aly Song/Reuters/达志影像</span></figcaption></figure><p>台湾是否可能发生战争，是许多人担心的问题，2019年的世界价值观问卷（World Value Survey）显示，有七成的台湾人“非常或有点担心”台湾卷入战争；而在美国众议院议长佩洛西（Nancy Pelosi）访问台湾之后，解放军对台展开报复性<a href="https://theinitium.com/article/20220806-taiwan-whats-new-pla-exercises/">围岛军演</a>，更让国际媒体高度关注台海战争的可能性。<br><br>面对这样的局势，包含政治人物如总统蔡英文、企业家曹兴诚，皆开始倡导“全民防卫”的概念，希望能提升大众的民防意识与能力。前参谋总长李喜明将军，在新著作《台湾的胜算：以小制大的不对称战略，全台湾人都应了解的整体防卫构想》中，更倡议建立正规军外的“国土防卫部队”，由平民志愿者组成，平时学习军事专长，而在战时，这样的部队就可以遍布各乡镇市区，让人们就近保卫自己居住的地方。<br><br>但是，这些倡议若要实现，前提都是台湾人民愿意为保卫国家而战，而台湾人真的愿意吗？此外，存在各种政治分歧的台湾，李喜明将军认为，以“保卫乡土”为共同目标的民间自愿者，将有办法“放下”各种分歧，团结起来，为家园而战──这样的想像，究竟是切合实际的构想，还是一厢情愿的误判呢？</p>
+            <figcaption itemprop="caption">2021年12月18日，高雄左营海军基地，士兵接受为期十周的训练，成为台湾海军陆战队两栖侦搜大队。<span class="credit">摄：Aly Song/Reuters/达志影像</span></figcaption></figure><p><strong>（谢达文，国立台湾大学社会学研究所博士候选人）</strong></p>
+<p>台湾是否可能发生战争，是许多人担心的问题，2019年的世界价值观问卷（World Value Survey）显示，有七成的台湾人“非常或有点担心”台湾卷入战争；而在美国众议院议长佩洛西（Nancy Pelosi）访问台湾之后，解放军对台展开报复性<a href="https://theinitium.com/article/20220806-taiwan-whats-new-pla-exercises/">围岛军演</a>，更让国际媒体高度关注台海战争的可能性。<br><br>面对这样的局势，包含政治人物如总统蔡英文、企业家曹兴诚，皆开始倡导“全民防卫”的概念，希望能提升大众的民防意识与能力。前参谋总长李喜明将军，在新著作《台湾的胜算：以小制大的不对称战略，全台湾人都应了解的整体防卫构想》中，更倡议建立正规军外的“国土防卫部队”，由平民志愿者组成，平时学习军事专长，而在战时，这样的部队就可以遍布各乡镇市区，让人们就近保卫自己居住的地方。<br><br>但是，这些倡议若要实现，前提都是台湾人民愿意为保卫国家而战，而台湾人真的愿意吗？此外，存在各种政治分歧的台湾，李喜明将军认为，以“保卫乡土”为共同目标的民间自愿者，将有办法“放下”各种分歧，团结起来，为家园而战──这样的想像，究竟是切合实际的构想，还是一厢情愿的误判呢？</p>
 <p>虽然，“为国家而战”是一个复杂的概念，从拿起枪械、出钱捐助军方、在占领区不与敌人合作等等，种种行动选项到底算不算是“为国家而战”，不同人可能有不同想法；又虽然，在承平时期说“愿意为国家而战”，与愿意接受训练，并在战争到来时真的敢于作战，也未必是一样的事情。但是，分析问卷调查中，人们说自己愿不愿意为国家而战，仍然是一件有参考价值的事情。</p>
 <p>先说结论，透过分析2019年的“<a href="https://www.rchss.sinica.edu.tw/files/archive/1603_ec9cb610.pdf">世界价值观问卷</a>”（该调查以五至六年为一周期），本文发现：</p>
-<ul>
-<li>有四分之三的台湾人，会说自己愿意为国家而战，与其他国家相比是个很高的数字；而且，这个意愿跨越人口中一些重要的分界线：不分族群、不分家庭经济近况、不分教育程度，都愿意为国家而战。</li>
-<li>即使是认为台湾民主化程度不及格的人，都仍然有高比率愿意为国家而战；而认为台湾民主化程度已经及格的人，愿意为国家而战的比率又更高；不过，在认为已经及格的人当中，认为台湾民主现况有多接近完美，反而并不重要。</li>
-<li>同样，即使对于身为台湾人没有荣耀感的人们，仍有高比率愿意为国家而战；对于身为台湾人“感到自豪”的人们，愿意为国家而战的比率又更高。</li>
-</ul>
-<h2>捍卫国家是台湾共识：横跨不同群体</h2>
-<blockquote>
-<p>台湾固然是个内部分歧的社会，但是当人们面临对国家、对家园最大的威胁，台湾社会可以说是团结的。</p>
-</blockquote>
-<p>这份问卷询问受访者“我们当然都希望不会再有战争。但是如果真的有的话，您会愿意为保卫国家而战吗？”对此，有高达四分之三的台湾人回答“愿意”，比率相当地高；这样的数据，甚至高于韩国（67.4%），以及同一时间（现在俄乌战争爆发前）的乌克兰（56.9%）。</p>
