--- a/_posts/2022-12-13-INMEDIA-劉智鵬-嶺大文研過去有逆向發展傾向-重整教員後現純粹討論文化.html
+++ b/_posts/2022-12-13-INMEDIA-劉智鵬-嶺大文研過去有逆向發展傾向-重整教員後現純粹討論文化.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/LU%201280_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>嶺南大學去年先後與在文化研究系任教多年的羅永生、許寶強及葉蔭聰終止合約，惟拒透露原因。嶺大副校長劉智鵬今出席立法會一個小組委員會時提到，嶺大有「一個部門」過去有逆向發展傾向，但在2019年至今進行大規模結構重整後，部分教員自然流失或終止續約，活躍在政治言論的教員現已不再任教，「連兼任教師都唔俾佢留喺度」。</p>
+<img src="https://www.inmediahk.net/files/column_images/LU%201280_0.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>嶺南大學去年先後與在文化研究系任教多年的羅永生、許寶強及葉蔭聰終止合約，惟拒透露原因。嶺大副校長劉智鵬周二出席立法會一個小組委員會時提到，嶺大有「一個部門」過去有逆向發展傾向，但在2019年至今進行大規模結構重整後，部分教員自然流失或終止續約，活躍在政治言論的教員現已不再任教，「連兼任教師都唔俾佢留喺度」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1v76b77h56" title="無標題"><img src="https://live.staticflickr.com/65535/52561009569_58c94b9e85_b.jpg" width="1024" alt="無標題" /></a><br /><em>嶺大副校長劉智鵬</em></p>
 <p>工聯會吳秋北稱留意有大學過去出現「逆向國民教育」情況，點名嶺大文化研究系「通過本土主義搞港獨」。劉智鵬回應指，現時課程變成「純粹討論文化」，學生表現亦和五、六年前完全不同。</p>
 <p>去年9月，嶺大稱在文化研究系任教多年的客席副教授的羅永生及許寶強，「合約已於今年9月完結」，羅永生當時回覆傳媒查詢時稱是遭嶺大單方面終止合約。另一名原為文化研究系助理教授的葉蔭聰，在2020年時被否決實任申請，只獲一年臨時合約，至去年八月約滿不獲續任。</p>
