--- a/_posts/2022-12-13-INMEDIA-有議員關注花墟攤檔會否被指阻街-當局稱-適當時候-會執法.html
+++ b/_posts/2022-12-13-INMEDIA-有議員關注花墟攤檔會否被指阻街-當局稱-適當時候-會執法.html
@@ -14,7 +14,7 @@ author: 獨媒報導
 <p>市民近年關注的阻街，多涉及擺賣蔬果。不過太子的花墟檔戶，亦長年佔用街頭擺賣。周二（12月13日）立法會食物安全及環境衛生事務委員會討論提高罰款事宜，自由黨邵家輝指花墟為行業「特殊情況」，認為當局可特別處理。</p>
 <p>環境及生態局局長謝展寰表示，處理有優次，但指花墟亦會適當時作出改正，「我哋係會適當時候，去執法、要求改正，所以希望相關商戶自己先執返整齊。」</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/8E33MNEW01" title="螢幕截圖 2022-12-13 下午9.43.05"><img src="https://live.staticflickr.com/65535/52560481907_6e33ac63ec_b.jpg" alt="螢幕截圖 2022-12-13 下午9.43.05" /></a><br /><em>環境及生態局局長謝展寰</em></p>
-<p>邵家輝又關注店舖上落貨時會否被檢控，當局指會考慮實際情況。邵家輝亦指，今日即便尚未提高罰則，但因政務司副司長卓永興立定決心，加強執法，已大大改善環境。他稱雖然不反對增加罰款，但指加幅高於市民薪酬增長，「03年又係萬零蚊，而家又係」，需考慮市民及商戶承受能力。謝展寰則表示，社會對環境衛生和市容整潔要求比當年高，今次是「黃金機會」。</p>
+<p>邵家輝又關注店舖上落貨時會否被檢控，當局指會考慮實際情況。邵家輝亦指，今日即便尚未提高罰則，但因政務司副司長卓永興立定決心，加強執法，已大大改善環境。他稱雖然不反對增加罰款，但指加幅高於市民薪酬增長，「03年又係萬零蚊人工，而家又係」，需考慮市民及商戶承受能力。謝展寰則表示，社會對環境衛生和市容整潔要求比當年高，今次是「黃金機會」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/2AGo85Fmp3" title="螢幕截圖 2022-12-13 下午9.43.22"><img src="https://live.staticflickr.com/65535/52561406045_78fcbb4ef2_b.jpg" alt="螢幕截圖 2022-12-13 下午9.43.22" /></a><br /><em>邵家輝</em></p>
 <p><strong>楊永杰指老弱婦孺被針對</strong></p>
 <p>亦有議員認為罰款額不足，楊永杰認為店鋪阻街罰$6,000「唔夠辣」，建議採取累進式罰款，甚至考慮扣分停牌。他又認為須重新審視亂拋垃圾定義，稱有街坊反映「畀人蝦」，煙頭被風吹落地、老人家手提膠袋，紙巾不慎掉落地等亦被罰款，「往往捉老弱婦孺，年青力壯就唔見有執法。」</p>
