--- a/_posts/2022-12-13-INMEDIA-立場案-國安警-主觀認為-587篇文章違法篩剩30篇-其餘因與案無關銷毀無交出.html
+++ b/_posts/2022-12-13-INMEDIA-立場案-國安警-主觀認為-587篇文章違法篩剩30篇-其餘因與案無關銷毀無交出.html
@@ -10,6 +10,7 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/58730.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>《立場新聞》母公司、前總編輯鍾沛權及前署任總編輯林紹桐被控「串謀發布煽動刊物」罪，由於控方審訊中途始呈上逾1,500頁未披露文件，辯方申請永久終止聆訊，押後一個月今（13日）於區域法院處理。</p>
 <p>發出截圖指示的偵緝高級督察盧健賢，供稱去年6月22日收到情報《立場》或將下架文章，遂與上司兩度審視網站所有他「主觀認為」或違反煽動罪或國安法的文章，並承認因文章太多而「隨意」在網上挑選。他們其後從中篩選出涉「敏感內容」的587篇，並經多次會議後篩至30篇交予案件主管。盧解釋沒有選出來的文章與案無關，故無指示下屬交出，也因僅屬「前期工作」而無需索取律政司意見。辯方批評，警方篩選文章的過程是故意行為，不透明也不公平，對辯方不公。案件明天續審。</p>
+<p>鍾沛權，今日獲准保釋，他在早上完成手續後返回法庭繼續應訊。審訊結束後，他登上私家車離開，有人喊：「阿權返去好好休息啊！」，鍾回頭揮手說「多謝」，上車後又數度揮手示意。（<a href="https://youtu.be/kHN5-pUjdDs">影片</a>）</p>
 <p><strong>控方審訊時呈逾千頁新文件 辯方申永久終止聆訊</strong></p>
 <p>本案上月審訊時，其中一名作供警廖浩明（音譯）在盤問下透露，曾按上司偵緝高級督察盧健賢指示，擷取逾300篇《立場》文章，但僅向案件主管交出30篇。控方稱不知情，其後於審訊第5天新呈6個文件夾、逾1,500頁文件，並為發出截圖指示的小隊主管補錄口供。辯方稱口供與早前警員「有出入」，亦會影響盤問方向，申請永久終止聆訊，押後一個月今於區院處理，另<a href="https://bit.ly/3FqJdQf">鍾沛權今早申保釋獲批</a>。</p>
 <p><strong>去年6月獲悉《立場》將下架文章 警方即進行證據保存</strong></p>
