--- a/_posts/2022-12-13-PQ-習近平出訪波斯灣阿拉伯國家-拓展區域影響力但人民幣結算石油未成.html
+++ b/_posts/2022-12-13-PQ-習近平出訪波斯灣阿拉伯國家-拓展區域影響力但人民幣結算石油未成.html
@@ -16,7 +16,7 @@ author: 艾格姆
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/bc3ccf92-fjj2zy6xkaajpq3-1024x659.jpg" alt="" class="wp-image-122881" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/bc3ccf92-fjj2zy6xkaajpq3-1024x659.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/bc3ccf92-fjj2zy6xkaajpq3-300x193.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/bc3ccf92-fjj2zy6xkaajpq3-768x494.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/bc3ccf92-fjj2zy6xkaajpq3.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>習近平出訪波斯灣國家，並在沙烏地阿拉伯首都利雅德成功舉辦首屆「阿拉伯–中國峰會」<br>圖／Foreign Ministry@KSAmofaEN</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/bc3ccf92-fjj2zy6xkaajpq3-1024x659.jpg" alt="" class="wp-image-122881" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2022/12/bc3ccf92-fjj2zy6xkaajpq3-1024x659.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/bc3ccf92-fjj2zy6xkaajpq3-300x193.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/bc3ccf92-fjj2zy6xkaajpq3-768x494.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2022/12/bc3ccf92-fjj2zy6xkaajpq3.jpg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>習近平出訪波斯灣國家，並在沙烏地阿拉伯首都利雅德成功舉辦首屆「阿拉伯–中國峰會」<br>圖／Foreign Ministry@KSAmofaEN</figcaption></figure></div>
 
 
 
