--- a/_posts/2022-12-14-INMEDIA-穆斯林女生被迫讀基督教倫理科-校方拖半年始豁免.html
+++ b/_posts/2022-12-14-INMEDIA-穆斯林女生被迫讀基督教倫理科-校方拖半年始豁免.html
@@ -8,10 +8,10 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/20221214m_0.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>申訴專員公署的年度報告，提及一宗涉及宗教的投訴。一名信奉穆斯林的女生選讀一間有基督教背景的Band1 中學升學，開學後女生家長以「宗教差異」為由，要求豁免女兒修讀基督教倫理科，但遭校方拒絕。家長再向教育局投訴，局方始介入事件，強烈建議該中學應該考慮涉事學生福址和宗教需要，校方最終在近6個月後妥協，豁免不用上該科的堂。申訴專員公署最終認為，該宗針對教育局的投訴不成立，原因是認為教育局與校方及投訴人磋商的時間屬「可以接受」。</p>
+<img src="https://www.inmediahk.net/files/column_images/20221214m_0.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>申訴專員公署的年度報告，提及一宗涉及宗教的投訴。一名信奉伊斯蘭教的女生選讀一間有基督教背景的 Band1 中學升學，開學後女生家長以「宗教差異」為由，要求豁免穆斯林女兒修讀基督教倫理科，但遭校方拒絕。家長再向教育局投訴，局方始介入事件，強烈建議該中學應該考慮涉事學生福址和宗教需要，校方最終在近6個月後妥協，豁免不用上該科的堂。申訴專員公署最終認為，該宗針對教育局的投訴不成立，原因是認為教育局與校方及投訴人磋商的時間屬「可以接受」。</p>
 <p>報告指，教育局在9月底收到家長投訴，最初認為涉及學校的日常運作及內部事務，應按「校本管理」和「家校合作」原則，遂先將投訴交回學校處理。教育局在10月初聯絡學校，建議豁免涉事女生修讀宗教科。</p>
 <p><strong>教育局去信法團校董會 事件仍蹉跎</strong></p>
-<p>但事件在10月中仍未解決，教育局遂致函事涉事學校的法團校董會，強烈建議該校考慮事涉學生的福祉和宗教需要，參照同類學校的做法，以及相關法例、公約、指引和刊物，配合和答應家長提出的要求。教育局亦向校董會表明，政府不能接受涉事學生純粹因為「學校拒絕豁免她修讀宗教科」而轉校。事件最終拖了六個月，在2021年3月底，校方才與女生家長達成協議，安排女生在各學年的基督教倫理課時段，讓她參加「校本抽離式課程」，上其他科目的課。</p>
+<p>但事件在10月中仍未解決，教育局遂致函涉事學校的法團校董會，強烈建議該校考慮事涉學生的福祉和宗教需要，參照同類學校的做法，以及相關法例、公約、指引和刊物，配合和答應家長提出的要求。教育局亦向校董會表明，政府不能接受涉事學生純粹因為「學校拒絕豁免她修讀宗教科」而轉校。事件最終拖了六個月，在2021年3月底，校方才與女生家長達成協議，安排女生在各學年的基督教倫理課時段，讓她參加「校本抽離式課程」，上其他科目的課。</p>
 <p>申訴專員公署審視教育局處理事件做法，公署指教育局以「校本管理原則」先把投訴轉介回涉事中學處理，「是可以理解的」；又指局方在這半年期間，一直協助投訴人與涉事中學達成共識。公署認為教育局「已盡其職責」，確保學校的安排以各類學生的最大利益為依歸，保障了學生在宗教信仰自由的權利。</p>
 <p><strong>公署稱疫情影響 半年時間「可接受」</strong></p>
 <p>公署對事件花費半年，稱事件「或許未能符合投訴人的期望」，不過考慮雙方意見分歧，以及疫情令服務受阻，認為磋商時間屬可以接受，亦同意教育局採取合理措施，確保涉事學生利益得到最大程度的保障。</p>
